2018-December-01 Struan Robertson
		
		* MesmerEnv.h/.cpp, System.cpp, MicroRate.cpp: Changes temperature limits on the
		canonical rate coefficient test function. 

2018-November-25 Struan Robertson
		
		* AnalyticalRepresentation.cpp, ThermodynamicTable.cpp, ThermodynamicUtils.h/.cpp: 
		Refactoring of thermodynamic table output methods to base class. 

2018-November-25 Struan Robertson
		
		* MesmerEnv.h/.cpp, System.cpp, MicroRate.cpp: Added temperature limits to the
		canonical rate coefficient test function. 

		* Baseline updated.

2018-November-18 Struan Robertson
		
		* gDensityOfStates.cpp: Added support for rotational constants being quoted in GHz.  

		* Baseline updated.

2018-November-18 Struan Robertson
		
		* HighPressureRateCoefficients.cpp: Initial implementation of 
		high pressure rate coefficient method.  

		* Examples/Metyl_O_to_Methoxy: New example.

2018-November-18 Struan Robertson
		
		* AnalyticalRepresention.cpp, MesmerMath.h/.cpp: Initial implementation toward the 
		inclusion of species thermodynamic data in Cantera/ChemKin output.  

2018-November-16 Robin Shannon
		
		* Documentation update.

2018-November-13 Struan Robertson

		* CollisionOperator.h/.cpp: Fix for population instability problem.

		* MesmserFlags.h/.cpp: Added trace weighting flag.

		* Baseline updates.

2018-November-10 Struan Robertson

		* ConditionManager.cpp, System.cpp: Changes to allow for the weighting of trace data.

		* MesmerMaths.cpp: Fix for convolution bug.

		* System.h: Version update.

		* MolecularComponent.cpp: Tidy-up.

		* Documentation re-versioning and update.

2018-October-31 Struan Robertson

		* DensityOfStates.cpp, gStructure.cpp, MolecularComponents.h/.cpp: Generalized the fix
		for atomic multiplicity made on 07/May/2018.

		* ConditionsManager.cpp: Extended the "PTset" method to specify a reaction interest.

		* UnitConversion.cpp: Added GHz as an energy unit.

2018-June-07 Struan Robertson
