@@ -1,6 +1,10 @@
 2018-December-01 Struan Robertson
 		
-		* MesmerEnv.h/.cpp, System.cpp, MicroRate.cpp: Changes temperature limits on the
+		* AnalyticalRepresentation.cpp: Tidying up of analytical representation method. 
+
+2018-December-01 Struan Robertson
+		
+		* MesmerEnv.h/.cpp, System.cpp, MicroRate.cpp: Changes to temperature limits on the
 		canonical rate coefficient test function. 
 
 2018-November-25 Struan Robertson
